--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <section>
             <div class="container">
                     <p>
-                            <h2 class="milash">Мой милаш самый лучший в мире</h2>
+                            <h2 class="milash">Мы нюхаем клей и нам в кайф</h2>
                         </p>
             </div>
         </section>
