guys i added i new thing ya know

--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <!DOCTYPE html>
+
+<link href="https://fonts.googleapis.com/css?family=ZCOOL+QingKe+HuangYou" rel="stylesheet">
+
+
 <html lang="en">
     <head>
         <meta charset="UTF-8">
@@ -8,7 +12,9 @@
     <body>
         <header>
             <div class="container">
-                
+                <ul class="menu-bar">
+                    <i><a href="nastya.html">Хочешь услышать что-нибудь важное?</a></i>
+                </ul>
                
             </div>
         </header>
@@ -25,4 +31,4 @@
             </div>
         </footer>
     </body>
-</html>
+</html><
