guys i added i new thing ya know

--- a/nastya.html
+++ b/nastya.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<meta charset="utf-8"
+<meta charset="utf-8">
     <link rel="stylesheet", href="nastya.css">
     <head>
         <title></title>
