guys i added i new thing ya know

--- a/nastya.html
+++ b/nastya.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-    <link rel="stylesheet", href="nastya.css">
+    <link rel="stylesheet", href="css/nastya.css">
     <head>
         <title></title>
     </head>
     <body>
         <p class="nastya_super">
-            Я очень люблю Настю, хоть она и много ворчит 
+            Я очень люблю Настю, хоть она и много ворчит. 
         </p>
 
     </body>
