--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
                 <ul class="menu-bar">
                     
                     <li>
-                        <a href="nastya.html">
+                        <a href="#">
                             <button type="button" class="btn btn-danger">
-                                Настя?
+                                кнопка
                             </button>
                         </a>
                     </li>
@@ -29,9 +29,10 @@
                         </a>
                     </li>
                     <li>
-                            <a href="#">
+                            <a href="books/winner_stays_alone.fb2" download="">
+                                
                                 <button type="button" class="btn btn-danger">
-                                Кликни!
+                                Скачать книгу победитель остается один
                                 </button>
                             </a>
                         </li>
