--- a/page.html
+++ b/page.html
@@ -16,7 +16,15 @@
             
             <p id="fuck">the fuck</p>
         </div>
-
+        <div id="lamp">
+            <button onclick="document.getElementById('lamp_pic').src='pic_bulbon.gif'">
+                Turn on the light 
+            </button>
+            <img id="lamp_pic" src="img/lamp/pic_bulboff.gif">
+            <button onclick="document.getElementById('lamp_pic').src='pic_bulboff.gif'">
+                Turn off the light
+            </button>
+        </div>
     </body>
 </html>
 
