--- a/institute/web_labs/web_labs.html
+++ b/institute/web_labs/web_labs.html
@@ -10,14 +10,14 @@
                 
                 <a href="lab1/lab1.html">
                     <button class="btn btn-primary">
-                        лаб 1 Web
+                        lab1 
                     </button>
                 </a>
             </li>
             <li>
                 <a href="lab2/lab2.html">
                     <button class="btn btn-primary">
-                        лаб 2 Web
+                        lab2
                     </button>
                 </a>
             </li>
