--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     </ul>
             </div>
             <iframe 
-            src="https://money.yandex.ru/quickpay/shop-widget?writer=seller&targets=%D0%9D%D0%B0%20%D0%BF%D0%B5%D1%87%D0%B5%D0%BD%D1%8C%D0%BA%D0%B8&targets-hint=&default-sum=100&button-text=11&payment-type-choice=on&mobile-payment-type-choice=on&fio=on&comment=on&hint=&successURL=&quickpay=shop&account=410019030029943" width="423" height="301" frameborder="0" allowtransparency="true" scrolling="no">
+            src="https://money.yandex.ru/quickpay/shop-widget?writer=seller&targets=%D0%9D%D0%B0%20%D0%BF%D0%B5%D1%87%D0%B5%D0%BD%D1%8C%D0%BA%D0%B8&targets-hint=&default-sum=100&button-text=13&payment-type-choice=on&mobile-payment-type-choice=on&hint=&successURL=&quickpay=shop&account=410019030029943" width="423" height="222" frameborder="0" allowtransparency="true" scrolling="no">
             </iframe>
 
                 
