--- a/js_learning/main.html
+++ b/js_learning/main.html
@@ -7,7 +7,11 @@
     <head></head>
     <body>
         <div id="first-div">
-           <button onclick=""
+           <button id="my_button"
+           onmouseover= "window.alert('sosi')"
+           onmouseout = "document.getElementById('my_button')
+           .innerHTML = 'lol'"
+           
            style="position: absolute; left: 600px; top: 300px; width: 200px; height: 150px; font-size: 20pt; background-color: black; color: white;">
                 Do smth
            </button> 
